<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_animal_lover"
    app:startDestination="@id/DestHome">
    <fragment
        android:id="@+id/DestAboutApp"
        android:name="com.example.onlyfoods.AboutAppFragment"
        android:label="@string/about_app_tb_string"
        tools:layout="@layout/fragment_about_app" />
    <fragment
        android:id="@+id/DestCat"
        android:name="com.example.onlyfoods.CatFragment"
        android:label="@string/cat"
        tools:layout="@layout/fragment_cat" />
    <fragment
        android:id="@+id/DestDog"
        android:name="com.example.onlyfoods.DogFragment"
        android:label="@string/dog"
        tools:layout="@layout/fragment_dog" />
    <fragment
        android:id="@+id/DestHome"
        android:name="com.example.onlyfoods.HomeFragment"
        android:label="Home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/NextToDog"
            app:destination="@id/DestDog" />
        <action
            android:id="@+id/NextToHedgehog"
            app:destination="@id/DestHedgehog" />
    </fragment>
    <fragment
        android:id="@+id/DestHedgehog"
        android:name="com.example.onlyfoods.HedgehogFragment"
        android:label="@string/hedgehog"
        tools:layout="@layout/fragment_hedgehog" />
</navigation>