<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CLAddRecommendation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRecommendation" >

    <TextView
        android:id="@+id/TVSelectRestaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/select_a_restaurant"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042" />

    <AutoCompleteTextView
        android:id="@+id/ACTVRestaurant"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/montserrat"
        android:hint="@string/search_for_a_restaurant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVSelectRestaurant" />

    <TextView
        android:id="@+id/TVRecommendTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/choose_who_to_recommend_to"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ACTVRestaurant"
        app:layout_constraintVertical_bias="0.115" />

    <TextView
        android:id="@+id/TVWriteMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/write_a_message"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ACTVRecommendTo" />

    <AutoCompleteTextView
        android:id="@+id/ACTVRecommendTo"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/montserrat"
        android:hint="@string/search_for_a_follower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVRecommendTo" />

    <EditText
        android:id="@+id/ETRecommendMessage"
        android:layout_width="360dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:gravity="start|top"
        android:hint="@string/tell_your_follower_what_to_expect_about_this_restaurant"
        android:inputType="textMultiLine"
        android:lines="3"
        android:maxLines="3"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVWriteMessage" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/BTNRecommendPlace"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:background="@drawable/rounded_rectangle_r2_button_12dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/recommend_place"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>