<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CLUserProfile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.MyProfileFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/BTNUPFollow"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/follow_button"
        android:fontFamily="@font/montserrat"
        android:text="@string/follow"
        android:textAllCaps="false"
        android:textColor="@color/Y5"
        android:textSize="11sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVUPSeparator" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/BTNUPFollowing"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/following_button"
        android:fontFamily="@font/montserrat"
        android:text="@string/following"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="11sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVUPSeparator" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/IVUPBackdrop"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/roundedImageViewRoundedBottom"
        app:srcCompat="@drawable/empty_backdrop" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/IVUPProfileImage"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:background="#007AB3"
        android:padding="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.094"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
        app:srcCompat="@drawable/empty_profile_image"
        app:strokeColor="@color/white"
        app:strokeWidth="3dp" />

    <TextView
        android:id="@+id/TVUPName"
        android:layout_width="147dp"
        android:layout_height="25dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IVUPProfileImage"
        app:layout_constraintVertical_bias="0.043" />

    <TextView
        android:id="@+id/TVUPFollowing"
        android:layout_width="89dp"
        android:layout_height="24dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="72 Following"
        android:textColor="@color/gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVUPName"
        app:layout_constraintVertical_bias="0.018" />

    <TextView
        android:id="@+id/TVUPFollowers"
        android:layout_width="85dp"
        android:layout_height="26dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="37 Followers"
        android:textColor="@color/gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.331"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVUPName"
        app:layout_constraintVertical_bias="0.016" />

    <TextView
        android:id="@+id/TVUPSeparator"
        android:layout_width="26dp"
        android:layout_height="21dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/separator"
        android:textColor="@color/gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVUPName"
        app:layout_constraintVertical_bias="0.018" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/TLUPFollows"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/HLUserProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/TIUPFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recent_places" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/TIUPFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reviews" />

    </com.google.android.material.tabs.TabLayout>

    <View
        android:id="@+id/HLUserProfile"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/IVUPBackdrop"
        app:layout_constraintVertical_bias="0.57" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/VPUPFollows"
        android:layout_width="match_parent"
        android:layout_height="267dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HLUserProfile"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>